--- a/hospital-service-impl/src/main/resources/standard/log4j.properties
+++ b/hospital-service-impl/src/main/resources/standard/log4j.properties
@@ -1,5 +1,3 @@
-#development
-
 #Root
 log4j.rootCategory=info,stdout,runLog
 
@@ -14,7 +12,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %p [%l] %
 #runLog
 log4j.appender.runLog=org.apache.log4j.RollingFileAppender
 log4j.appender.runLog.layout=org.apache.log4j.PatternLayout
-log4j.appender.runLog.File=${portal.root}/logs/jh-dte-server.log
+log4j.appender.runLog.File=${portal.root}/logs/hospital-service.log
 log4j.appender.runLog.MaxFileSize=1024KB
 log4j.appender.runLog.MaxBackupIndex=500
 log4j.appender.runLog.layout.ConversionPattern=%d %p [%c] - %m%n
