add wechat interface and restful webservice interface demo

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
       <module>hospital-service-impl</module>
       <module>hospital-service-impl-test</module>
         <module>common-utils</module>
+        <module>hospital-service-impl-web</module>
     </modules>
     <packaging>pom</packaging>
 
