add wechat interface and restful webservice interface demo

--- a/hospital-service-impl/pom.xml
+++ b/hospital-service-impl/pom.xml
@@ -51,6 +51,12 @@
             </activation>
         </profile>
         <profile>
+            <id>test</id>
+            <properties>
+                <package.environment>test</package.environment>
+            </properties>
+        </profile>
+        <profile>
             <id>lanxi</id>
             <properties>
                 <package.environment>lanxi</package.environment>
@@ -77,8 +83,8 @@
                 <!-- 资源根目录排除各环境的配置，使用单独的资源目录来指定 -->
                 <excludes>
                     <exclude>standard/**</exclude>
-                    <exclude>lanxi/**</exclude>
                     <exclude>test/**</exclude>
+                    <exclude>lanxi/**</exclude>
                     <exclude>assembly.xml</exclude>
                 </excludes>
                 <!-- 是否替换资源中的属性-->
