--- a/hospital-service-impl/src/main/resources/lanxi/log4j.properties
+++ b/hospital-service-impl/src/main/resources/lanxi/log4j.properties
@@ -1,10 +1,10 @@
 #Root
-log4j.rootCategory=info,stdout,runLog
+log4j.rootLogger=debug,stdout,runLog
 
 log4j.logger.com.yuntai.med.restapi=info,restLog
 log4j.logger.searchLog=info,searchLog
 
-#stdout
+#stdout  定义一个名为 stdout 的输出目的地， ConsoleAppender 为控制台。
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %p [%l] %t - %m%n
@@ -16,5 +16,18 @@ log4j.appender.runLog.File=${portal.root}/logs/hospital-service.log
 log4j.appender.runLog.MaxFileSize=1024KB
 log4j.appender.runLog.MaxBackupIndex=500
 log4j.appender.runLog.layout.ConversionPattern=%d %p [%c] - %m%n
+
+#spring 配置
+log4j.logger.org.springframework=DEBUG
+#mybatis 配置
+log4j.logger.org.mybatis=DEBUG
+###显示SQL语句部分
+log4j.logger.com.ibatis=DEBUG
+log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=DEBUG
+log4j.logger.com.ibatis.common.jdbc.ScriptRunner=DEBUG
+log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
+log4j.logger.java.sql.Connection=DEBUG
+log4j.logger.java.sql.Statement=DEBUG
+log4j.logger.java.sql.PreparedStatement=DEBUG
 
 
