--- a/hospital-service-impl/src/main/resources/lanxi/mybatis.properties
+++ b/hospital-service-impl/src/main/resources/lanxi/mybatis.properties
@@ -1,10 +1,10 @@
-#his 
-his.jdbc.driver=com.mysql.jdbc.Driver
-his.jdbc.url=jdbc:mysql://127.0.0.1:3306/esb?useUnicode=true&amp;characterEncoding=UTF-8
-his.jdbc.username=root
-his.jdbc.password=
+#his Oracle
+his.jdbc.driver=oracle.jdbc.driver.OracleDriver
+his.jdbc.url=jdbc:oracle:thin:@10.36.191.60:1521:orcl2
+his.jdbc.username=hisinterface
+his.jdbc.password=hisinterface
 #初始化连接
-his.jdbc.initialPoolSize=1
+his.jdbc.initialPoolSize=5
 his.jdbc.minPoolSize=0
 his.jdbc.maxPoolSize=10
 his.jdbc.acquireIncrement=5
@@ -12,10 +12,10 @@ his.jdbc.maxIdleTime=10
 his.jdbc.maxStatements=0
 
 #emr
-emr.jdbc.driver=com.mysql.jdbc.Driver
-emr.jdbc.url=jdbc:mysql://121.40.185.58:3306/esb?useUnicode=true&amp;characterEncoding=UTF-8
-emr.jdbc.username=jianhaihug
-emr.jdbc.password=joinhealth123
+emr.jdbc.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+emr.jdbc.url=jdbc:sqlserver://10.36.191.103:1433;databaseName=medical;integratedSecurity=false;
+emr.jdbc.username=sa
+emr.jdbc.password=sa
 emr.jdbc.initialPoolSize=1
 emr.jdbc.minPoolSize=0
 emr.jdbc.maxPoolSize=10
@@ -47,11 +47,11 @@ pacs.jdbc.acquireIncrement=5
 pacs.jdbc.maxIdleTime=10
 pacs.jdbc.maxStatements=0
 
-#pe
-pe.jdbc.driver=com.mysql.jdbc.Driver
-pe.jdbc.url=jdbc:mysql://127.0.0.1:3306/esb?useUnicode=true&amp;characterEncoding=UTF-8
-pe.jdbc.username=root
-pe.jdbc.password=
+#pe SQLServer
+pe.jdbc.driver=net.sourceforge.jtds.jdbc.Driver
+pe.jdbc.url=jdbc:jtds:sqlserver://10.36.191.103:1433;DatabaseName=medical
+pe.jdbc.username=sa
+pe.jdbc.password=sa
 pe.jdbc.initialPoolSize=1
 pe.jdbc.minPoolSize=0
 pe.jdbc.maxPoolSize=10
