--- a/hospital-service-impl-test/pom.xml
+++ b/hospital-service-impl-test/pom.xml
@@ -171,5 +171,11 @@
             <artifactId>fastjson</artifactId>
             <version>${fastjson.version}</version>
         </dependency>
+        <dependency>
+            <groupId>cn.joinhealth</groupId>
+            <artifactId>hospital-service-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
